force-app/main/default/objects/CFO_BD_Weekly_Digest__c/CFO_BD_Weekly_Digest__c.object-meta.xml
<CustomObject>
    <label>CFO BD Weekly Digest</label>
    <nameField>
        <displayFormat>WD-{00000}</displayFormat>
        <label>ID</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>CFO BD Weekly Digests</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>