force-app/main/default/objects/CFO_BD_Weekly_Digest__c/fields/AI_Prompt_Used__c.field-meta.xml
<CustomField>
    <fullName>AI_Prompt_Used__c</fullName>
    <label>AI Prompt Used</label>
    <length>131072</length>
    <type>LongTextArea</type>
</CustomField>