force-app/main/default/objects/CFO_BD_Weekly_Digest__c/fields/Date_Generated__c.field-meta.xml
<CustomField>
    <fullName>Date_Generated__c</fullName>
    <label>Date Generated</label>
    <type>Date</type>
</CustomField>