force-app/main/default/objects/CFO_BD_Weekly_Digest__c/fields/Full_JSON_Analysis__c.field-meta.xml
<CustomField>
    <fullName>Full_JSON_Analysis__c</fullName>
    <label>Full JSON Analysis</label>
    <length>131072</length>
    <type>LongTextArea</type>
</CustomField>